fix .arb and edit storage screen

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1,44 +1,214 @@
 {
-  "meal_type_breakfast": "Frühstück",
-  "meal_type_lunch": "Mittagessen",
-  "meal_type_dinner": "Abendessen",
-  "meal_type_snack": "Snack",
-  "shopping": "Einkaufen",
+  "actions": "Aktionen",
+  "addButtonTooltip": "Nährstoff hinzufügen",
   "addMeal": "Mahlzeit hinzufügen",
-  "viewExpenses": "Ausgaben anzeigen",
-  "inventory": "Inventar",
-  "viewMeals": "Mahlzeiten anzeigen",
-  "recipeTips": "Rezepttipps",
-  "customizeCategories": "Kategorien anpassen",
-  "removeAllCategories": "Alle Kategorien entfernen",
-  "meat": "Fleisch",
-  "fish": "Fisch",
-  "pasta_bread_rice": "Nudeln, Brot und Reis",
-  "sauces_condiments": "Saucen und Gewürze",
-  "vegetables": "Gemüse",
-  "fruit": "Obst",
-  "dairy_products": "Milchprodukte",
-  "water": "Wasser",
-  "dessert": "Dessert",
-  "salty_snacks": "Salzige Snacks",
-  "drinks": "Getränke",
-  "save": "Speichern",
+  "addProduct": "Produkt hinzufügen",
+  "addStorage": "Lagerort hinzufügen",
+  "addSupermarket": "Supermarkt hinzufügen",
+  "alreadyHaveAccount": "Bereits ein Konto? Anmelden",
+  "appBarBackgroundColor": "App-Leiste Hintergrundfarbe",
+  "apr": "Apr",
+  "aug": "Aug",
+  "barcode": "Barcode",
   "cancel": "Abbrechen",
-  "menu": "Menü",
+  "carbohydrates": "Kohlenhydrate",
+  "category": "Kategorie",
+  "change_name_to": "Namen ändern in",
   "changeLanguage": "Sprache ändern",
-  "modifyThemeColors": "Themenfarben ändern",
-  "changeTheme": "Theme ändern",
-  "logout": "Abmelden",
-  "language": "Sprache",
-  "selectLanguage": "Sprache auswählen",
-  "home": "Startseite",
-  "loginRegister": "Anmelden/Registrieren",
-  "userProfile": "Benutzerprofil",
-  "currentPassword": "Aktuelles Passwort",
-  "newPassword": "Neues Passwort",
+  "changeTheme": "Design ändern",
+  "cholesterol": "Cholesterin",
+  "chooseFromGallery": "Aus Galerie wählen",
+  "close": "Schließen",
+  "colorLabel": "{color}",
+  "confirm": "Bestätigen",
+  "confirmDelete": "Möchten Sie diesen Supermarkt wirklich löschen?",
+  "confirmDeleteExpense": "Möchten Sie diese Ausgabe wirklich löschen?",
+  "confirmDeleteMeal": "Möchten Sie diese Mahlzeit wirklich löschen?",
+  "confirmDeleteMessage": "Möchten Sie {name} wirklich löschen?",
   "confirmNewPassword": "Neues Passwort bestätigen",
-  "updatePassword": "Passwort aktualisieren",
-  "noUserLoggedIn": "Kein Benutzer angemeldet",
+  "confirmPassword": "Passwort bestätigen",
+  "createAccount": "Konto erstellen",
+  "currentPassword": "Aktuelles Passwort",
+  "customizeCategories": "Kategorien anpassen",
+  "customizeTheme": "Design anpassen",
+  "dairy_products": "Milchprodukte",
+  "darkTheme": "Dunkles Design",
+  "date": "Datum",
+  "daysUntilExpiration": "Verfallsdatum",
+  "dec": "Dez",
+  "delete": "Löschen",
+  "deleteButtonTooltip": "Nährstoff löschen",
+  "dessert": "Dessert",
+  "details": "Details",
+  "drinks": "Getränke",
+  "edit_macronutrient": "Nährstoff bearbeiten",
+  "edit_value_100g": "Wert bearbeiten (100g)",
+  "editButtonTooltip": "Nährstoff bearbeiten",
+  "editProduct": "Produkt bearbeiten",
+  "editQuantity": "Menge bearbeiten",
+  "editStorage": "Lagerort bearbeiten",
+  "email": "E-Mail",
+  "energy": "Energie",
+  "enterAmount": "Betrag eingeben",
+  "enterBudget": "Budget eingeben",
+  "enterEmail": "Bitte E-Mail eingeben",
+  "enterPassword": "Bitte Passwort eingeben",
+  "enterProductName": "Produktnamen eingeben",
+  "enterUsername": "Bitte Benutzernamen eingeben",
+  "error": "Fehler",
+  "errorUpdatingPassword": "Fehler beim Aktualisieren des Passworts",
+  "expenseDeleted": "Ausgabe erfolgreich gelöscht",
+  "expenseDetailTitle": "Ausgabendetails",
+  "expenseSaved": "Ausgabe erfolgreich gespeichert!",
+  "expirationDate": "Verfallsdatum",
+  "fats": "Fette",
+  "feb": "Feb",
+  "fiber": "Ballaststoffe",
+  "filter": "Filter",
+  "filterByCategory": "Nach Kategorie filtern",
+  "filterRecipes": "Rezepte filtern",
+  "fish": "Fisch",
+  "freezer": "Gefrierschrank",
+  "fridge": "Kühlschrank",
+  "fruit": "Obst",
+  "gramsAvailable": "g verfügbar",
+  "have": "Vorhanden",
+  "home": "Start",
+  "imageUrl": "Bild-URL",
+  "incorrectCurrentPassword": "Aktuelles Passwort ist falsch",
+  "insertMealType": "Mahlzeit eingeben",
+  "insertProductName": "Produktnamen eingeben",
+  "invalidValue": "Ungültiger Wert",
+  "inventory": "Inventar",
+  "inventoryTitle": "Inventar anzeigen",
+  "jan": "Jan",
+  "jul": "Jul",
+  "jun": "Jun",
+  "kgAvailable": "kg verfügbar",
+  "language": "Sprache",
+  "lightTheme": "Helles Design",
+  "listProducts": "Produktliste",
+  "loadRecipeScreen": "Rezept-Bildschirm laden",
+  "login": "Anmelden",
+  "loginRegister": "Anmelden/Registrieren",
+  "loginSuccess": "Anmeldung erfolgreich",
+  "logout": "Abmelden",
+  "macronutrient": "Nährstoff",
+  "macronutrients": "Nährstoffe",
+  "mar": "Mär",
+  "may": "Mai",
+  "meal_type_breakfast": "Frühstück",
+  "meal_type_dinner": "Abendessen",
+  "meal_type_lunch": "Mittagessen",
+  "meal_type_snack": "Snack",
+  "mealDeleted": "Mahlzeit erfolgreich gelöscht",
+  "mealSavedSuccessfully": "Mahlzeit erfolgreich gespeichert",
+  "mealType": "Mahlzeitentyp",
+  "meat": "Fleisch",
+  "menu": "Menü",
+  "modifyThemeColors": "Design-Farben anpassen",
+  "monounsaturated_fats": "Einfach ungesättigte Fettsäuren",
+  "month": "Monat",
+  "monthOf": "Monat",
   "name": "Name",
-  "email": "E-Mail"
+  "nameLabel": "Name",
+  "newPassword": "Neues Passwort",
+  "newProduct": "Neues Produkt",
+  "no": "Nein",
+  "noAccount": "Kein Konto",
+  "noAvailableProducts": "Keine Produkte verfügbar, versuchen Sie eine andere Kategorie oder gehen Sie einkaufen",
+  "noExpensesForPeriod": "Keine Ausgaben für den ausgewählten Zeitraum gefunden",
+  "noExpensesFound": "Keine Ausgaben gefunden",
+  "noImageAvailable": "Kein Bild verfügbar",
+  "noImageTaken": "Kein Foto aufgenommen",
+  "noMealsForPeriod": "Keine Mahlzeiten für den ausgewählten Zeitraum gefunden",
+  "noMealsFound": "Keine Mahlzeiten gefunden",
+  "noRecipesFound": "Keine Rezepte gefunden",
+  "noSavedProducts": "Keine gespeicherten Produkte",
+  "noSelectedProducts": "Keine Produkte ausgewählt",
+  "noUserLoggedIn": "Kein Benutzer angemeldet",
+  "nov": "Nov",
+  "oct": "Okt",
+  "ok": "OK",
+  "onPrimaryColor": "Primärfarbe (Text)",
+  "other": "Sonstiges",
+  "pantry": "Vorratskammer",
+  "password": "Passwort",
+  "passwordsDoNotMatch": "Passwörter stimmen nicht überein",
+  "passwordUpdated": "Passwort erfolgreich aktualisiert!",
+  "pasta_bread_rice": "Nudeln, Brot und Reis",
+  "polyunsaturated_fats": "Mehrfach ungesättigte Fettsäuren",
+  "price": "Preis",
+  "pricePerKg": "Preis pro kg",
+  "primaryColor": "Primärfarbe",
+  "productDeletedSuccessfully": "Produkt erfolgreich gelöscht",
+  "productName": "Produktname",
+  "products": "Produkte",
+  "proteins": "Proteine",
+  "purchaseDate": "Kaufdatum",
+  "quantity": "Menge",
+  "quantityInKg": "Gewichtsmenge (kg)",
+  "quantityOwned": "Vorhandene Menge",
+  "quantityUnitOwned": "Vorhandene Einheiten",
+  "quantityWeightOwned": "Vorhandenes Gesamtgewicht",
+  "recipeTips": "Rezepttipps",
+  "removeAllCategories": "Alle Kategorien entfernen",
+  "salty_snacks": "Salzige Snacks",
+  "saturated_fats": "Gesättigte Fettsäuren",
+  "sauces_condiments": "Saucen und Gewürze",
+  "save": "Speichern",
+  "save_meal": "Mahlzeit speichern",
+  "saveButtonTooltip": "Änderungen speichern",
+  "saveExpense": "Ausgabe speichern",
+  "search": "Suchen",
+  "searchByProductName": "Nach Produktnamen suchen",
+  "searchIcon": "Suchsymbol",
+  "searchProductByName": "Produkt nach Namen suchen",
+  "secondaryColor": "Sekundärfarbe",
+  "selectCategory": "Kategorie auswählen",
+  "selectColor": "Farbe auswählen",
+  "selectedProducts": "Ausgewählte Produkte",
+  "selectedQuantity": "Ausgewählte Menge",
+  "selectLanguage": "Sprache auswählen",
+  "selectMealType": "Mahlzeitentyp auswählen",
+  "selectProducts": "Produkte auswählen",
+  "selectSupermarket": "Supermarkt auswählen",
+  "sep": "Sep",
+  "shopping": "Einkaufen",
+  "shoppingTitle": "Einkaufen",
+  "signUp": "Registrieren",
+  "signupSuccess": "Registrierung erfolgreich",
+  "sodium": "Natrium",
+  "storageName": "Lagerortname",
+  "store": "Geschäft",
+  "successAddProduct": "Produkt erfolgreich hinzugefügt",
+  "sugars": "Zucker",
+  "suggest": "Vorschlagen",
+  "supermarket": "Supermarkt",
+  "takePicture": "Foto aufnehmen",
+  "total": "Gesamt",
+  "totalAmount": "Gesamtbetrag",
+  "totalBalance": "Gesamtbilanz",
+  "totalExpense": "Gesamtausgaben",
+  "totalWeight": "Gesamtgewicht",
+  "unitPrice": "Stückpreis",
+  "units": "Einheiten",
+  "unitWeight": "Stückgewicht",
+  "update": "Aktualisieren",
+  "updatePassword": "Passwort aktualisieren",
+  "username": "Benutzername",
+  "userProfile": "Benutzerprofil",
+  "valueLabel": "Wert (100g)",
+  "valuePer100g": "Wert (100g)",
+  "valuesPer100g": "Werte (100g)",
+  "vegetables": "Gemüse",
+  "viewExpenses": "Ausgaben anzeigen",
+  "viewMeals": "Mahlzeiten anzeigen",
+  "water": "Wasser",
+  "week": "Woche",
+  "weekOf": "Woche vom",
+  "weightInGrams": "Gewicht (g)",
+  "weightInKg": "Gewicht (kg)",
+  "year": "Jahr",
+  "yes": "Ja"
 }
