--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,214 +1,214 @@
 {
-  "meal_type_breakfast": "Breakfast",
-  "meal_type_lunch": "Lunch",
-  "meal_type_dinner": "Dinner",
-  "meal_type_snack": "Snack",
-  "shopping": "Shopping",
-  "addMeal": "Add Meal",
-  "viewExpenses": "View Expenses",
-  "inventory": "Inventory",
-  "viewMeals": "View Meals",
-  "recipeTips": "Recipe Tips",
-  "customizeCategories": "Customize Categories",
-  "removeAllCategories": "Remove All Categories",
-  "meat": "Meat",
-  "fish": "Fish",
-  "pasta_bread_rice": "Pasta, Bread and Rice",
-  "sauces_condiments": "Sauces and Condiments",
-  "vegetables": "Vegetables",
-  "fruit": "Fruit",
-  "dairy_products": "Dairy Products",
-  "water": "Water",
-  "dessert": "Dessert",
-  "salty_snacks": "Salty Snacks",
-  "drinks": "Drinks",
-  "save": "Save",
-  "cancel": "Cancel",
-  "selectMealType": "Select Meal Type",
-  "insertMealType": "Insert Meal",
-  "save_meal": "Save Meal",
-  "search": "Search",
-  "selectedProducts": "Selected Products",
-  "noSelectedProducts": "No selected products",
-  "listProducts": "List of Products",
-  "searchProductByName": "Search product by name",
-  "insertProductName": "Insert product name",
-  "edit_macronutrient": "Edit Macronutrient",
-  "change_name_to": "Change name to",
-  "edit_value_100g": "Edit value (100g)",
-  "macronutrient": "Macronutrient",
-  "valuePer100g": "Value (100g)",
   "actions": "Actions",
-  "nameLabel": "Name",
-  "valueLabel": "Value (100g)",
   "addButtonTooltip": "Add macronutrient",
-  "editButtonTooltip": "Edit macronutrient",
-  "saveButtonTooltip": "Save changes",
-  "deleteButtonTooltip": "Delete macronutrient",
-  "energy": "Energy",
-  "fats": "Fats",
-  "proteins": "Proteins",
-  "carbohydrates": "Carbohydrates",
-  "sugars": "Sugars",
-  "fiber": "Fiber",
-  "saturated_fats": "Saturated Fats",
-  "monounsaturated_fats": "Monounsaturated Fats",
-  "polyunsaturated_fats": "Polyunsaturated Fats",
-  "cholesterol": "Cholesterol",
-  "sodium": "Sodium",
-  "takePicture": "Take Picture",
-  "chooseFromGallery": "Choose from Gallery",
-  "noImageTaken": "No image taken",
-  "week": "Week",
-  "month": "Month",
-  "year": "Year",
-  "editQuantity": "Edit Quantity",
-  "quantityInKg": "Quantity in weight (kg)",
-  "confirm": "Confirm",
-  "update": "Update",
-  "selectedQuantity": "Selected Quantity",
-  "kgAvailable": "kg available",
-  "gramsAvailable": "g available",
-  "weightInKg": "Weight (kg)",
-  "weightInGrams": "Weight (g)",
-  "units": "Units",
-  "total": "Total",
-  "have": "Owned",
-  "quantity": "Quantity",
-  "fridge": "Fridge",
-  "pantry": "Pantry",
-  "freezer": "Freezer",
-  "other": "Other",
-  "productName": "Product Name",
-  "noImageAvailable": "No image available",
-  "price": "Price",
-  "unitPrice": "Unit Price",
-  "totalWeight": "Total Weight",
-  "pricePerKg": "Price per kg",
-  "unitWeight": "Unit Weight",
-  "category": "Category",
-  "store": "Store",
-  "quantityOwned": "Quantity Owned",
-  "quantityWeightOwned": "total weight owned",
-  "macronutrients": "Macronutrients",
-  "valuesPer100g": "Values (100g)",
-  "expirationDate": "Expiration Date",
-  "supermarket": "Supermarket",
-  "purchaseDate": "Purchase Date",
-  "barcode": "Barcode",
-  "imageUrl": "Image URL",
-  "successAddProduct": "Product added successfully",
-  "newProduct": "New Product",
-  "passwordsDoNotMatch": "Passwords do not match",
-  "loginSuccess": "Login successful",
-  "signupSuccess": "Sign up successful",
-  "error": "Error",
-  "login": "Login",
-  "signUp": "Sign Up",
-  "username": "Username",
-  "email": "Email",
-  "password": "Password",
-  "confirmPassword": "Confirm Password",
-  "enterUsername": "Please enter your username",
-  "enterEmail": "Please enter your email",
-  "enterPassword": "Please enter your password",
-  "createAccount": "Create an account",
+  "addMeal": "Add Meal",
+  "addProduct": "Add Product",
+  "addStorage": "Add Storage",
+  "addSupermarket": "Add Supermarket",
   "alreadyHaveAccount": "Already have an account? Login",
-  "editStorage": "Edit Storage",
-  "storageName": "Storage Name",
-  "searchIcon": "Search Icon",
-  "expenseDetailTitle": "Expense Detail",
-  "date": "Date",
-  "totalAmount": "Total",
-  "details": "Details",
-  "home": "Home",
-  "loginRegister": "Login/Register",
-  "menu": "Menu",
+  "appBarBackgroundColor": "AppBar Background Color",
+  "apr": "Apr",
+  "aug": "Aug",
+  "barcode": "Barcode",
+  "cancel": "Cancel",
+  "carbohydrates": "Carbohydrates",
+  "category": "Category",
+  "change_name_to": "Change name to",
   "changeLanguage": "Change Language",
   "changeTheme": "Change Theme",
-  "logout": "Logout",
-  "inventoryTitle": "View Inventory",
-  "addStorage": "Add Storage",
-  "mealType": "Meal Type",
-  "totalExpense": "Total Expense",
-  "products": "Products",
-  "shoppingTitle": "Shopping",
-  "selectSupermarket": "Select a supermarket",
+  "cholesterol": "Cholesterol",
+  "chooseFromGallery": "Choose from Gallery",
   "close": "Close",
-  "addSupermarket": "Add Supermarket",
-  "addProduct": "Add Product",
-  "noSavedProducts": "No saved products",
-  "filterByCategory": "Filter by category",
-  "selectCategory": "Select Category",
-  "filter": "Filter",
-  "searchByProductName": "Search by product name",
-  "enterProductName": "Enter product name",
-  "totalBalance": "Total Balance",
-  "saveExpense": "Save Expense",
-  "expenseSaved": "Expense saved successfully!",
-  "userProfile": "User Profile",
-  "name": "Name",
-  "noUserLoggedIn": "No user logged in",
-  "noExpensesFound": "No expenses found",
-  "noExpensesForPeriod": "No expenses found for the selected period",
-  "noMealsFound": "No meals found",
-  "noMealsForPeriod": "No meals found for the selected period",
-  "weekOf": "Week of",
-  "monthOf": "Month of",
-  "jan": "Jan",
-  "feb": "Feb",
-  "mar": "Mar",
-  "apr": "Apr",
-  "may": "May",
-  "jun": "Jun",
-  "jul": "Jul",
-  "aug": "Aug",
-  "sep": "Sep",
-  "oct": "Oct",
-  "nov": "Nov",
-  "dec": "Dec",
-  "ok": "Ok",
-  "invalidValue": "Invalid value",
-  "enterBudget": "Enter budget",
-  "enterAmount": "Enter amount",
-  "suggest": "Suggest",
-  "noAvailableProducts": "No available products, try changing category or go shopping",
-  "quantityUnitOwned": "Units Owned",
-  "editProduct": "Edit Product",
-  "mealDeleted": "Meal deleted successfully",
-  "expenseDeleted": "Expense deleted successfully",
-  "confirmDeleteExpense": "Are you sure you want to delete this expense?",
-  "no": "No",
-  "yes": "Yes",
-  "confirmDeleteMeal": "Are you sure you want to delete this meal?",
-  "modifyThemeColors": "Modify Theme Colors",
-  "customizeTheme": "Customize Theme",
-  "lightTheme": "Light Theme",
-  "darkTheme": "Dark Theme",
-  "primaryColor": "Primary Color",
-  "onPrimaryColor": "On Primary Color",
-  "secondaryColor": "Secondary Color",
-  "appBarBackgroundColor": "AppBar Background Color",
-  "selectColor": "Select Color",
   "colorLabel": "{color}",
-  "daysUntilExpiration": "expiration",
-  "delete": "Delete",
+  "confirm": "Confirm",
   "confirmDelete": "Are you sure you want to delete this supermarket?",
+  "confirmDeleteExpense": "Are you sure you want to delete this expense?",
+  "confirmDeleteMeal": "Are you sure you want to delete this meal?",
   "confirmDeleteMessage": "Are you sure you want to delete {name}?",
-  "newPassword": "New Password",
-  "updatePassword": "Update Password",
-  "passwordUpdated": "Password updated successfully!",
-  "errorUpdatingPassword": "Error updating password. Please try again.",
-  "currentPassword": "Current Password",
   "confirmNewPassword": "Confirm New Password",
-  "incorrectCurrentPassword": "The current password is incorrect.",
-  "noRecipesFound": "No recipes found",
-  "loadRecipeScreen": "Load Recipe Screen",
+  "confirmPassword": "Confirm Password",
+  "createAccount": "Create an account",
+  "currentPassword": "Current Password",
+  "customizeCategories": "Customize Categories",
+  "customizeTheme": "Customize Theme",
+  "dairy_products": "Dairy Products",
+  "darkTheme": "Dark Theme",
+  "date": "Date",
+  "daysUntilExpiration": "expiration",
+  "dec": "Dec",
+  "delete": "Delete",
+  "deleteButtonTooltip": "Delete macronutrient",
+  "dessert": "Dessert",
+  "details": "Details",
+  "drinks": "Drinks",
+  "edit_macronutrient": "Edit Macronutrient",
+  "edit_value_100g": "Edit value (100g)",
+  "editButtonTooltip": "Edit macronutrient",
+  "editProduct": "Edit Product",
+  "editQuantity": "Edit Quantity",
+  "editStorage": "Edit Storage",
+  "email": "Email",
+  "energy": "Energy",
+  "enterAmount": "Enter amount",
+  "enterBudget": "Enter budget",
+  "enterEmail": "Please enter your email",
+  "enterPassword": "Please enter your password",
+  "enterProductName": "Enter product name",
+  "enterUsername": "Please enter your username",
+  "error": "Error",
+  "errorUpdatingPassword": "Error updating password. Please try again.",
+  "expenseDeleted": "Expense deleted successfully",
+  "expenseDetailTitle": "Expense Detail",
+  "expenseSaved": "Expense saved successfully!",
+  "expirationDate": "Expiration Date",
+  "fats": "Fats",
+  "feb": "Feb",
+  "fiber": "Fiber",
+  "filter": "Filter",
+  "filterByCategory": "Filter by category",
   "filterRecipes": "Filter Recipes",
-  "selectProducts": "Select products you want to use in the recipe",
-  "mealSavedSuccessfully": "Meal saved successfully",
-  "productDeletedSuccessfully": "Product deleted successfully",
+  "fish": "Fish",
+  "freezer": "Freezer",
+  "fridge": "Fridge",
+  "fruit": "Fruit",
+  "gramsAvailable": "g available",
+  "have": "Owned",
+  "home": "Home",
+  "imageUrl": "Image URL",
+  "incorrectCurrentPassword": "The current password is incorrect.",
+  "insertMealType": "Insert Meal",
+  "insertProductName": "Insert product name",
+  "invalidValue": "Invalid value",
+  "inventory": "Inventory",
+  "inventoryTitle": "View Inventory",
+  "jan": "Jan",
+  "jul": "Jul",
+  "jun": "Jun",
+  "kgAvailable": "kg available",
   "language": "Language",
+  "lightTheme": "Light Theme",
+  "listProducts": "List of Products",
+  "loadRecipeScreen": "Load Recipe Screen",
+  "login": "Login",
+  "loginRegister": "Login/Register",
+  "loginSuccess": "Login successful",
+  "logout": "Logout",
+  "macronutrient": "Macronutrient",
+  "macronutrients": "Macronutrients",
+  "mar": "Mar",
+  "may": "May",
+  "meal_type_breakfast": "Breakfast",
+  "meal_type_dinner": "Dinner",
+  "meal_type_lunch": "Lunch",
+  "meal_type_snack": "Snack",
+  "mealDeleted": "Meal deleted successfully",
+  "mealSavedSuccessfully": "Meal saved successfully",
+  "mealType": "Meal Type",
+  "meat": "Meat",
+  "menu": "Menu",
+  "modifyThemeColors": "Modify Theme Colors",
+  "monounsaturated_fats": "Monounsaturated Fats",
+  "month": "Month",
+  "monthOf": "Month of",
+  "name": "Name",
+  "nameLabel": "Name",
+  "newPassword": "New Password",
+  "newProduct": "New Product",
+  "no": "No",
+  "noAccount": "Don't have an account? Sign up",
+  "noAvailableProducts": "No available products, try changing category or go shopping",
+  "noExpensesForPeriod": "No expenses found for the selected period",
+  "noExpensesFound": "No expenses found",
+  "noImageAvailable": "No image available",
+  "noImageTaken": "No image taken",
+  "noMealsForPeriod": "No meals found for the selected period",
+  "noMealsFound": "No meals found",
+  "noRecipesFound": "No recipes found",
+  "noSavedProducts": "No saved products",
+  "noSelectedProducts": "No selected products",
+  "noUserLoggedIn": "No user logged in",
+  "nov": "Nov",
+  "oct": "Oct",
+  "ok": "Ok",
+  "onPrimaryColor": "On Primary Color",
+  "other": "Other",
+  "pantry": "Pantry",
+  "password": "Password",
+  "passwordsDoNotMatch": "Passwords do not match",
+  "passwordUpdated": "Password updated successfully!",
+  "pasta_bread_rice": "Pasta, Bread and Rice",
+  "polyunsaturated_fats": "Polyunsaturated Fats",
+  "price": "Price",
+  "pricePerKg": "Price per kg",
+  "primaryColor": "Primary Color",
+  "productDeletedSuccessfully": "Product deleted successfully",
+  "productName": "Product Name",
+  "products": "Products",
+  "proteins": "Proteins",
+  "purchaseDate": "Purchase Date",
+  "quantity": "Quantity",
+  "quantityInKg": "Quantity in weight (kg)",
+  "quantityOwned": "Quantity Owned",
+  "quantityUnitOwned": "Units Owned",
+  "quantityWeightOwned": "total weight owned",
+  "recipeTips": "Recipe Tips",
+  "removeAllCategories": "Remove All Categories",
+  "salty_snacks": "Salty Snacks",
+  "saturated_fats": "Saturated Fats",
+  "sauces_condiments": "Sauces and Condiments",
+  "save": "Save",
+  "save_meal": "Save Meal",
+  "saveButtonTooltip": "Save changes",
+  "saveExpense": "Save Expense",
+  "search": "Search",
+  "searchByProductName": "Search by product name",
+  "searchIcon": "Search Icon",
+  "searchProductByName": "Search product by name",
+  "secondaryColor": "Secondary Color",
+  "selectCategory": "Select Category",
+  "selectColor": "Select Color",
+  "selectedProducts": "Selected Products",
+  "selectedQuantity": "Selected Quantity",
   "selectLanguage": "Select Language",
-  "noAccount": "Don't have an account? Sign up"
+  "selectMealType": "Select Meal Type",
+  "selectProducts": "Select products you want to use in the recipe",
+  "selectSupermarket": "Select a supermarket",
+  "sep": "Sep",
+  "shopping": "Shopping",
+  "shoppingTitle": "Shopping",
+  "signUp": "Sign Up",
+  "signupSuccess": "Sign up successful",
+  "sodium": "Sodium",
+  "storageName": "Storage Name",
+  "store": "Store",
+  "successAddProduct": "Product added successfully",
+  "sugars": "Sugars",
+  "suggest": "Suggest",
+  "supermarket": "Supermarket",
+  "takePicture": "Take Picture",
+  "total": "Total",
+  "totalAmount": "Total",
+  "totalBalance": "Total Balance",
+  "totalExpense": "Total Expense",
+  "totalWeight": "Total Weight",
+  "unitPrice": "Unit Price",
+  "units": "Units",
+  "unitWeight": "Unit Weight",
+  "update": "Update",
+  "updatePassword": "Update Password",
+  "username": "Username",
+  "userProfile": "User Profile",
+  "valueLabel": "Value (100g)",
+  "valuePer100g": "Value (100g)",
+  "valuesPer100g": "Values (100g)",
+  "vegetables": "Vegetables",
+  "viewExpenses": "View Expenses",
+  "viewMeals": "View Meals",
+  "water": "Water",
+  "week": "Week",
+  "weekOf": "Week of",
+  "weightInGrams": "Weight (g)",
+  "weightInKg": "Weight (kg)",
+  "year": "Year",
+  "yes": "Yes"
 }
