--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,44 +1,214 @@
 {
-  "meal_type_breakfast": "Desayuno",
-  "meal_type_lunch": "Almuerzo",
-  "meal_type_dinner": "Cena",
-  "meal_type_snack": "Merienda",
-  "shopping": "Compras",
+  "actions": "Acciones",
+  "addButtonTooltip": "Añadir macronutriente",
   "addMeal": "Añadir comida",
-  "viewExpenses": "Ver gastos",
-  "inventory": "Inventario",
-  "viewMeals": "Ver comidas",
-  "recipeTips": "Consejos de recetas",
-  "customizeCategories": "Personalizar categorías",
-  "removeAllCategories": "Eliminar todas las categorías",
-  "meat": "Carne",
-  "fish": "Pescado",
-  "pasta_bread_rice": "Pasta, Pan y Arroz",
-  "sauces_condiments": "Salsas y Condimentos",
-  "vegetables": "Verduras",
-  "fruit": "Fruta",
-  "dairy_products": "Lácteos",
-  "water": "Agua",
-  "dessert": "Postre",
-  "salty_snacks": "Snacks salados",
-  "drinks": "Bebidas",
-  "save": "Guardar",
+  "addProduct": "Añadir producto",
+  "addStorage": "Añadir almacenamiento",
+  "addSupermarket": "Añadir supermercado",
+  "alreadyHaveAccount": "¿Ya tienes una cuenta? Inicia sesión",
+  "appBarBackgroundColor": "Color de fondo de la barra de aplicación",
+  "apr": "Abr",
+  "aug": "Ago",
+  "barcode": "Código de barras",
   "cancel": "Cancelar",
-  "menu": "Menú",
+  "carbohydrates": "Carbohidratos",
+  "category": "Categoría",
+  "change_name_to": "Cambiar nombre a",
   "changeLanguage": "Cambiar idioma",
-  "modifyThemeColors": "Modificar colores del tema",
   "changeTheme": "Cambiar tema",
-  "logout": "Cerrar sesión",
-  "language": "Idioma",
-  "selectLanguage": "Seleccionar idioma",
-  "home": "Inicio",
-  "loginRegister": "Iniciar sesión/Registrarse",
-  "userProfile": "Perfil de usuario",
-  "currentPassword": "Contraseña actual",
-  "newPassword": "Nueva contraseña",
+  "cholesterol": "Colesterol",
+  "chooseFromGallery": "Elegir de la galería",
+  "close": "Cerrar",
+  "colorLabel": "{color}",
+  "confirm": "Confirmar",
+  "confirmDelete": "¿Estás seguro de que quieres eliminar este supermercado?",
+  "confirmDeleteExpense": "¿Estás seguro de que quieres eliminar este gasto?",
+  "confirmDeleteMeal": "¿Estás seguro de que quieres eliminar esta comida?",
+  "confirmDeleteMessage": "¿Estás seguro de que quieres eliminar {name}?",
   "confirmNewPassword": "Confirmar nueva contraseña",
-  "updatePassword": "Actualizar contraseña",
-  "noUserLoggedIn": "Ningún usuario conectado",
+  "confirmPassword": "Confirmar contraseña",
+  "createAccount": "Crear cuenta",
+  "currentPassword": "Contraseña actual",
+  "customizeCategories": "Personalizar categorías",
+  "customizeTheme": "Personalizar tema",
+  "dairy_products": "Lácteos",
+  "darkTheme": "Tema oscuro",
+  "date": "Fecha",
+  "daysUntilExpiration": "caducidad",
+  "dec": "Dic",
+  "delete": "Eliminar",
+  "deleteButtonTooltip": "Eliminar macronutriente",
+  "dessert": "Postre",
+  "details": "Detalles",
+  "drinks": "Bebidas",
+  "edit_macronutrient": "Editar macronutriente",
+  "edit_value_100g": "Editar valor (100g)",
+  "editButtonTooltip": "Editar macronutriente",
+  "editProduct": "Editar producto",
+  "editQuantity": "Editar cantidad",
+  "editStorage": "Editar almacenamiento",
+  "email": "Correo electrónico",
+  "energy": "Energía",
+  "enterAmount": "Introducir cantidad",
+  "enterBudget": "Introducir presupuesto",
+  "enterEmail": "Por favor, introduce tu correo electrónico",
+  "enterPassword": "Por favor, introduce tu contraseña",
+  "enterProductName": "Introducir nombre del producto",
+  "enterUsername": "Por favor, introduce tu nombre de usuario",
+  "error": "Error",
+  "errorUpdatingPassword": "Error al actualizar la contraseña",
+  "expenseDeleted": "Gasto eliminado con éxito",
+  "expenseDetailTitle": "Detalle de gastos",
+  "expenseSaved": "¡Gasto guardado con éxito!",
+  "expirationDate": "Fecha de caducidad",
+  "fats": "Grasas",
+  "feb": "Feb",
+  "fiber": "Fibra",
+  "filter": "Filtrar",
+  "filterByCategory": "Filtrar por categoría",
+  "filterRecipes": "Filtrar recetas",
+  "fish": "Pescado",
+  "freezer": "Congelador",
+  "fridge": "Nevera",
+  "fruit": "Fruta",
+  "gramsAvailable": "g disponibles",
+  "have": "Disponible",
+  "home": "Inicio",
+  "imageUrl": "URL de imagen",
+  "incorrectCurrentPassword": "Contraseña actual incorrecta",
+  "insertMealType": "Insertar comida",
+  "insertProductName": "Insertar nombre del producto",
+  "invalidValue": "Valor inválido",
+  "inventory": "Inventario",
+  "inventoryTitle": "Ver inventario",
+  "jan": "Ene",
+  "jul": "Jul",
+  "jun": "Jun",
+  "kgAvailable": "kg disponibles",
+  "language": "Idioma",
+  "lightTheme": "Tema claro",
+  "listProducts": "Lista de productos",
+  "loadRecipeScreen": "Cargar pantalla de recetas",
+  "login": "Iniciar sesión",
+  "loginRegister": "Iniciar sesión/Registrarse",
+  "loginSuccess": "Inicio de sesión exitoso",
+  "logout": "Cerrar sesión",
+  "macronutrient": "Macronutriente",
+  "macronutrients": "Macronutrientes",
+  "mar": "Mar",
+  "may": "May",
+  "meal_type_breakfast": "Desayuno",
+  "meal_type_dinner": "Cena",
+  "meal_type_lunch": "Almuerzo",
+  "meal_type_snack": "Merienda",
+  "mealDeleted": "Comida eliminada con éxito",
+  "mealSavedSuccessfully": "Comida guardada con éxito",
+  "mealType": "Tipo de comida",
+  "meat": "Carne",
+  "menu": "Menú",
+  "modifyThemeColors": "Modificar colores del tema",
+  "monounsaturated_fats": "Grasas monoinsaturadas",
+  "month": "Mes",
+  "monthOf": "Mes de",
   "name": "Nombre",
-  "email": "Correo electrónico"
+  "nameLabel": "Nombre",
+  "newPassword": "Nueva contraseña",
+  "newProduct": "Nuevo producto",
+  "no": "No",
+  "noAccount": "Sin cuenta",
+  "noAvailableProducts": "No hay productos disponibles, intenta cambiar de categoría o ir de compras",
+  "noExpensesForPeriod": "No se encontraron gastos para el período seleccionado",
+  "noExpensesFound": "No se encontraron gastos",
+  "noImageAvailable": "No hay imagen disponible",
+  "noImageTaken": "No se ha tomado ninguna foto",
+  "noMealsForPeriod": "No se encontraron comidas para el período seleccionado",
+  "noMealsFound": "No se encontraron comidas",
+  "noRecipesFound": "No se encontraron recetas",
+  "noSavedProducts": "No hay productos guardados",
+  "noSelectedProducts": "No hay productos seleccionados",
+  "noUserLoggedIn": "Ningún usuario ha iniciado sesión",
+  "nov": "Nov",
+  "oct": "Oct",
+  "ok": "Aceptar",
+  "onPrimaryColor": "Color sobre primario",
+  "other": "Otro",
+  "pantry": "Despensa",
+  "password": "Contraseña",
+  "passwordsDoNotMatch": "Las contraseñas no coinciden",
+  "passwordUpdated": "¡Contraseña actualizada con éxito!",
+  "pasta_bread_rice": "Pasta, Pan y Arroz",
+  "polyunsaturated_fats": "Grasas poliinsaturadas",
+  "price": "Precio",
+  "pricePerKg": "Precio por kg",
+  "primaryColor": "Color primario",
+  "productDeletedSuccessfully": "Producto eliminado con éxito",
+  "productName": "Nombre del producto",
+  "products": "Productos",
+  "proteins": "Proteínas",
+  "purchaseDate": "Fecha de compra",
+  "quantity": "Cantidad",
+  "quantityInKg": "Cantidad en peso (kg)",
+  "quantityOwned": "Cantidad disponible",
+  "quantityUnitOwned": "Unidades disponibles",
+  "quantityWeightOwned": "Peso total disponible",
+  "recipeTips": "Consejos de recetas",
+  "removeAllCategories": "Eliminar todas las categorías",
+  "salty_snacks": "Snacks salados",
+  "saturated_fats": "Grasas saturadas",
+  "sauces_condiments": "Salsas y Condimentos",
+  "save": "Guardar",
+  "save_meal": "Guardar comida",
+  "saveButtonTooltip": "Guardar cambios",
+  "saveExpense": "Guardar gasto",
+  "search": "Buscar",
+  "searchByProductName": "Buscar por nombre de producto",
+  "searchIcon": "Icono de búsqueda",
+  "searchProductByName": "Buscar producto por nombre",
+  "secondaryColor": "Color secundario",
+  "selectCategory": "Seleccionar categoría",
+  "selectColor": "Seleccionar color",
+  "selectedProducts": "Productos seleccionados",
+  "selectedQuantity": "Cantidad seleccionada",
+  "selectLanguage": "Seleccionar idioma",
+  "selectMealType": "Seleccionar tipo de comida",
+  "selectProducts": "Seleccionar productos",
+  "selectSupermarket": "Seleccionar supermercado",
+  "sep": "Sep",
+  "shopping": "Compras",
+  "shoppingTitle": "Compras",
+  "signUp": "Registrarse",
+  "signupSuccess": "Registro exitoso",
+  "sodium": "Sodio",
+  "storageName": "Nombre del almacenamiento",
+  "store": "Tienda",
+  "successAddProduct": "Producto añadido con éxito",
+  "sugars": "Azúcares",
+  "suggest": "Sugerir",
+  "supermarket": "Supermercado",
+  "takePicture": "Tomar foto",
+  "total": "Total",
+  "totalAmount": "Total",
+  "totalBalance": "Balance total",
+  "totalExpense": "Gasto total",
+  "totalWeight": "Peso total",
+  "unitPrice": "Precio unitario",
+  "units": "Unidades",
+  "unitWeight": "Peso unitario",
+  "update": "Actualizar",
+  "updatePassword": "Actualizar contraseña",
+  "username": "Nombre de usuario",
+  "userProfile": "Perfil de usuario",
+  "valueLabel": "Valor (100g)",
+  "valuePer100g": "Valor (100g)",
+  "valuesPer100g": "Valores (100g)",
+  "vegetables": "Verduras",
+  "viewExpenses": "Ver gastos",
+  "viewMeals": "Ver comidas",
+  "water": "Agua",
+  "week": "Semana",
+  "weekOf": "Semana del",
+  "weightInGrams": "Peso (g)",
+  "weightInKg": "Peso (kg)",
+  "year": "Año",
+  "yes": "Sí"
 }
