--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -1,44 +1,214 @@
 {
-  "meal_type_breakfast": "Petit déjeuner",
-  "meal_type_lunch": "Déjeuner",
-  "meal_type_dinner": "Dîner",
-  "meal_type_snack": "Goûter",
-  "shopping": "Courses",
+  "actions": "Actions",
+  "addButtonTooltip": "Ajouter un macronutriment",
   "addMeal": "Ajouter un repas",
-  "viewExpenses": "Voir les dépenses",
-  "inventory": "Inventaire",
-  "viewMeals": "Voir les repas",
-  "recipeTips": "Conseils de recettes",
-  "customizeCategories": "Personnaliser les catégories",
-  "removeAllCategories": "Supprimer toutes les catégories",
-  "meat": "Viande",
-  "fish": "Poisson",
-  "pasta_bread_rice": "Pâtes, Pain et Riz",
-  "sauces_condiments": "Sauces et Condiments",
-  "vegetables": "Légumes",
-  "fruit": "Fruits",
-  "dairy_products": "Produits laitiers",
-  "water": "Eau",
-  "dessert": "Dessert",
-  "salty_snacks": "Snacks salés",
-  "drinks": "Boissons",
-  "save": "Enregistrer",
+  "addProduct": "Ajouter un produit",
+  "addStorage": "Ajouter un stockage",
+  "addSupermarket": "Ajouter un supermarché",
+  "alreadyHaveAccount": "Vous avez déjà un compte ? Connectez-vous",
+  "appBarBackgroundColor": "Couleur de fond de la barre d'application",
+  "apr": "Avr",
+  "aug": "Août",
+  "barcode": "Code-barres",
   "cancel": "Annuler",
-  "menu": "Menu",
+  "carbohydrates": "Glucides",
+  "category": "Catégorie",
+  "change_name_to": "Changer le nom en",
   "changeLanguage": "Changer de langue",
-  "modifyThemeColors": "Modifier les couleurs du thème",
   "changeTheme": "Changer de thème",
-  "logout": "Déconnexion",
-  "language": "Langue",
-  "selectLanguage": "Sélectionner la langue",
-  "home": "Accueil",
-  "loginRegister": "Connexion/Inscription",
-  "userProfile": "Profil utilisateur",
-  "currentPassword": "Mot de passe actuel",
-  "newPassword": "Nouveau mot de passe",
+  "cholesterol": "Cholestérol",
+  "chooseFromGallery": "Choisir depuis la galerie",
+  "close": "Fermer",
+  "colorLabel": "{color}",
+  "confirm": "Confirmer",
+  "confirmDelete": "Êtes-vous sûr de vouloir supprimer ce supermarché ?",
+  "confirmDeleteExpense": "Êtes-vous sûr de vouloir supprimer cette dépense ?",
+  "confirmDeleteMeal": "Êtes-vous sûr de vouloir supprimer ce repas ?",
+  "confirmDeleteMessage": "Êtes-vous sûr de vouloir supprimer {name} ?",
   "confirmNewPassword": "Confirmer le nouveau mot de passe",
-  "updatePassword": "Mettre à jour le mot de passe",
-  "noUserLoggedIn": "Aucun utilisateur connecté",
+  "confirmPassword": "Confirmer le mot de passe",
+  "createAccount": "Créer un compte",
+  "currentPassword": "Mot de passe actuel",
+  "customizeCategories": "Personnaliser les catégories",
+  "customizeTheme": "Personnaliser le thème",
+  "dairy_products": "Produits laitiers",
+  "darkTheme": "Thème sombre",
+  "date": "Date",
+  "daysUntilExpiration": "expiration",
+  "dec": "Déc",
+  "delete": "Supprimer",
+  "deleteButtonTooltip": "Supprimer le macronutriment",
+  "dessert": "Dessert",
+  "details": "Détails",
+  "drinks": "Boissons",
+  "edit_macronutrient": "Modifier le macronutriment",
+  "edit_value_100g": "Modifier la valeur (100g)",
+  "editButtonTooltip": "Modifier le macronutriment",
+  "editProduct": "Modifier le produit",
+  "editQuantity": "Modifier la quantité",
+  "editStorage": "Modifier le stockage",
+  "email": "Email",
+  "energy": "Énergie",
+  "enterAmount": "Entrer le montant",
+  "enterBudget": "Entrer le budget",
+  "enterEmail": "Veuillez entrer votre email",
+  "enterPassword": "Veuillez entrer votre mot de passe",
+  "enterProductName": "Entrer le nom du produit",
+  "enterUsername": "Veuillez entrer votre nom d'utilisateur",
+  "error": "Erreur",
+  "errorUpdatingPassword": "Erreur lors de la mise à jour du mot de passe",
+  "expenseDeleted": "Dépense supprimée avec succès",
+  "expenseDetailTitle": "Détail des dépenses",
+  "expenseSaved": "Dépense enregistrée avec succès !",
+  "expirationDate": "Date d'expiration",
+  "fats": "Graisses",
+  "feb": "Fév",
+  "fiber": "Fibres",
+  "filter": "Filtrer",
+  "filterByCategory": "Filtrer par catégorie",
+  "filterRecipes": "Filtrer les recettes",
+  "fish": "Poisson",
+  "freezer": "Congélateur",
+  "fridge": "Réfrigérateur",
+  "fruit": "Fruits",
+  "gramsAvailable": "g disponibles",
+  "have": "Possédé",
+  "home": "Accueil",
+  "imageUrl": "URL de l'image",
+  "incorrectCurrentPassword": "Mot de passe actuel incorrect",
+  "insertMealType": "Insérer le repas",
+  "insertProductName": "Insérer le nom du produit",
+  "invalidValue": "Valeur invalide",
+  "inventory": "Inventaire",
+  "inventoryTitle": "Voir l'inventaire",
+  "jan": "Jan",
+  "jul": "Juil",
+  "jun": "Juin",
+  "kgAvailable": "kg disponibles",
+  "language": "Langue",
+  "lightTheme": "Thème clair",
+  "listProducts": "Liste des produits",
+  "loadRecipeScreen": "Charger l'écran des recettes",
+  "login": "Connexion",
+  "loginRegister": "Connexion/Inscription",
+  "loginSuccess": "Connexion réussie",
+  "logout": "Déconnexion",
+  "macronutrient": "Macronutriment",
+  "macronutrients": "Macronutriments",
+  "mar": "Mar",
+  "may": "Mai",
+  "meal_type_breakfast": "Petit déjeuner",
+  "meal_type_dinner": "Dîner",
+  "meal_type_lunch": "Déjeuner",
+  "meal_type_snack": "Goûter",
+  "mealDeleted": "Repas supprimé avec succès",
+  "mealSavedSuccessfully": "Repas enregistré avec succès",
+  "mealType": "Type de repas",
+  "meat": "Viande",
+  "menu": "Menu",
+  "modifyThemeColors": "Modifier les couleurs du thème",
+  "monounsaturated_fats": "Graisses mono-insaturées",
+  "month": "Mois",
+  "monthOf": "Mois de",
   "name": "Nom",
-  "email": "Email"
+  "nameLabel": "Nom",
+  "newPassword": "Nouveau mot de passe",
+  "newProduct": "Nouveau produit",
+  "no": "Non",
+  "noAccount": "Pas de compte",
+  "noAvailableProducts": "Aucun produit disponible, essayez de changer de catégorie ou faites des courses",
+  "noExpensesForPeriod": "Aucune dépense trouvée pour la période sélectionnée",
+  "noExpensesFound": "Aucune dépense trouvée",
+  "noImageAvailable": "Aucune image disponible",
+  "noImageTaken": "Aucune image prise",
+  "noMealsForPeriod": "Aucun repas trouvé pour la période sélectionnée",
+  "noMealsFound": "Aucun repas trouvé",
+  "noRecipesFound": "Aucune recette trouvée",
+  "noSavedProducts": "Aucun produit enregistré",
+  "noSelectedProducts": "Aucun produit sélectionné",
+  "noUserLoggedIn": "Aucun utilisateur connecté",
+  "nov": "Nov",
+  "oct": "Oct",
+  "ok": "Ok",
+  "onPrimaryColor": "Couleur sur principale",
+  "other": "Autre",
+  "pantry": "Garde-manger",
+  "password": "Mot de passe",
+  "passwordsDoNotMatch": "Les mots de passe ne correspondent pas",
+  "passwordUpdated": "Mot de passe mis à jour avec succès !",
+  "pasta_bread_rice": "Pâtes, Pain et Riz",
+  "polyunsaturated_fats": "Graisses polyinsaturées",
+  "price": "Prix",
+  "pricePerKg": "Prix au kg",
+  "primaryColor": "Couleur principale",
+  "productDeletedSuccessfully": "Produit supprimé avec succès",
+  "productName": "Nom du produit",
+  "products": "Produits",
+  "proteins": "Protéines",
+  "purchaseDate": "Date d'achat",
+  "quantity": "Quantité",
+  "quantityInKg": "Quantité en poids (kg)",
+  "quantityOwned": "Quantité possédée",
+  "quantityUnitOwned": "Unités possédées",
+  "quantityWeightOwned": "Poids total possédé",
+  "recipeTips": "Conseils de recettes",
+  "removeAllCategories": "Supprimer toutes les catégories",
+  "salty_snacks": "Snacks salés",
+  "saturated_fats": "Graisses saturées",
+  "sauces_condiments": "Sauces et Condiments",
+  "save": "Enregistrer",
+  "save_meal": "Enregistrer le repas",
+  "saveButtonTooltip": "Enregistrer les modifications",
+  "saveExpense": "Enregistrer la dépense",
+  "search": "Rechercher",
+  "searchByProductName": "Rechercher par nom de produit",
+  "searchIcon": "Icône de recherche",
+  "searchProductByName": "Rechercher un produit par nom",
+  "secondaryColor": "Couleur secondaire",
+  "selectCategory": "Sélectionner une catégorie",
+  "selectColor": "Sélectionner une couleur",
+  "selectedProducts": "Produits sélectionnés",
+  "selectedQuantity": "Quantité sélectionnée",
+  "selectLanguage": "Sélectionner la langue",
+  "selectMealType": "Sélectionner le type de repas",
+  "selectProducts": "Sélectionner des produits",
+  "selectSupermarket": "Sélectionner un supermarché",
+  "sep": "Sep",
+  "shopping": "Courses",
+  "shoppingTitle": "Courses",
+  "signUp": "S'inscrire",
+  "signupSuccess": "Inscription réussie",
+  "sodium": "Sodium",
+  "storageName": "Nom du stockage",
+  "store": "Magasin",
+  "successAddProduct": "Produit ajouté avec succès",
+  "sugars": "Sucres",
+  "suggest": "Suggérer",
+  "supermarket": "Supermarché",
+  "takePicture": "Prendre une photo",
+  "total": "Total",
+  "totalAmount": "Total",
+  "totalBalance": "Solde total",
+  "totalExpense": "Dépense totale",
+  "totalWeight": "Poids total",
+  "unitPrice": "Prix unitaire",
+  "units": "Unités",
+  "unitWeight": "Poids unitaire",
+  "update": "Mettre à jour",
+  "updatePassword": "Mettre à jour le mot de passe",
+  "username": "Nom d'utilisateur",
+  "userProfile": "Profil utilisateur",
+  "valueLabel": "Valeur (100g)",
+  "valuePer100g": "Valeur (100g)",
+  "valuesPer100g": "Valeurs (100g)",
+  "vegetables": "Légumes",
+  "viewExpenses": "Voir les dépenses",
+  "viewMeals": "Voir les repas",
+  "water": "Eau",
+  "week": "Semaine",
+  "weekOf": "Semaine du",
+  "weightInGrams": "Poids (g)",
+  "weightInKg": "Poids (kg)",
+  "year": "Année",
+  "yes": "Oui"
 }
