--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -1,214 +1,214 @@
 {
-  "meal_type_breakfast": "Colazione",
-  "meal_type_lunch": "Pranzo",
-  "meal_type_dinner": "Cena",
-  "meal_type_snack": "Merenda",
-  "shopping": "Fai la spesa",
-  "addMeal": "Aggiungi pasto",
-  "viewExpenses": "Visualizza spese",
-  "inventory": "Inventario",
-  "viewMeals": "Visualizza pasti",
-  "recipeTips": "Consigli per la ricetta",
-  "customizeCategories": "Personalizza categorie",
-  "removeAllCategories": "Rimuovi tutte le categorie",
-  "meat": "Carne",
-  "fish": "Pesce",
-  "pasta_bread_rice": "Pasta, Pane e Riso",
-  "sauces_condiments": "Salse e Condimenti",
-  "vegetables": "Verdure",
-  "fruit": "Frutta",
-  "dairy_products": "Latticini",
-  "water": "Acqua",
-  "dessert": "Dolce",
-  "salty_snacks": "Snack salati",
-  "drinks": "Bevande",
-  "save": "Salva",
-  "cancel": "Annulla",
-  "selectMealType": "Seleziona il tipo di pasto",
-  "insertMealType": "Inserisci pasto",
-  "save_meal": "Salva pasto",
-  "search": "Cerca",
-  "selectedProducts": "Prodotti selezionati",
-  "noSelectedProducts": "Nessun prodotto selezionato",
-  "listProducts": "Elenco dei prodotti",
-  "searchProductByName": "Cerca prodotto per nome",
-  "insertProductName": "Inserisci nome del prodotto",
-  "edit_macronutrient": "Modifica Macronutriente",
-  "change_name_to": "Cambia nome in",
-  "edit_value_100g": "Modifica valore (100g)",
-  "macronutrient": "Macronutriente",
-  "valuePer100g": "Valore (100g)",
   "actions": "Azioni",
-  "nameLabel": "Nome",
-  "valueLabel": "Valore (100g)",
   "addButtonTooltip": "Aggiungi macronutriente",
-  "editButtonTooltip": "Modifica macronutriente",
-  "saveButtonTooltip": "Salva modifiche",
-  "deleteButtonTooltip": "Elimina macronutriente",
-  "energy": "Energia",
-  "fats": "Grassi",
-  "proteins": "Proteine",
-  "carbohydrates": "Carboidrati",
-  "sugars": "Zuccheri",
-  "fiber": "Fibre",
-  "saturated_fats": "Grassi Saturi",
-  "monounsaturated_fats": "Grassi Monoinsaturi",
-  "polyunsaturated_fats": "Grassi Polinsaturi",
-  "cholesterol": "Colesterolo",
-  "sodium": "Sodio",
-  "takePicture": "Scatta foto",
-  "chooseFromGallery": "Scegli dalla galleria",
-  "noImageTaken": "Nessuna immagine scattata",
-  "week": "Settimana",
-  "month": "Mese",
-  "year": "Anno",
-  "editQuantity": "Modifica Quantità",
-  "quantityInKg": "Quantità in peso (kg)",
-  "confirm": "Conferma",
-  "update": "Aggiorna",
-  "selectedQuantity": "Quantità selezionata",
-  "kgAvailable": "kg disponibili",
-  "gramsAvailable": "g disponibili",
-  "weightInKg": "Peso (kg)",
-  "weightInGrams": "Peso (g)",
-  "units": "Unità",
-  "total": "Totale",
-  "have": "Hai",
-  "fridge": "Frigorifero",
-  "pantry": "Dispensa",
-  "freezer": "Freezer",
-  "other": "Altro",
-  "productName": "Nome prodotto",
-  "noImageAvailable": "Immagine non disponibile",
-  "quantity": "Quantità",
-  "price": "Prezzo",
-  "unitPrice": "Prezzo unitario",
-  "totalWeight": "Peso totale",
-  "pricePerKg": "Prezzo per kg",
-  "unitWeight": "Peso unitario",
-  "category": "Categoria",
-  "store": "Negozio",
-  "quantityOwned": "Quantità posseduta",
-  "macronutrients": "Macronutrienti",
-  "valuesPer100g": "Valori (100g)",
-  "expirationDate": "Data di scadenza",
-  "supermarket": "Supermercato",
-  "purchaseDate": "Data di acquisto",
-  "barcode": "Codice a barre",
-  "imageUrl": "URL dell'immagine",
-  "successAddProduct": "Prodotto aggiunto con successo",
-  "newProduct": "Nuovo Prodotto",
-  "passwordsDoNotMatch": "Le password non corrispondono",
-  "loginSuccess": "Accesso effettuato con successo",
-  "signupSuccess": "Registrazione completata con successo",
-  "error": "Errore",
-  "login": "Accedi",
-  "signUp": "Registrati",
-  "username": "Nome utente",
-  "email": "Email",
-  "password": "Password",
-  "confirmPassword": "Conferma password",
-  "enterUsername": "Inserisci il tuo nome utente",
-  "enterEmail": "Inserisci la tua email",
-  "enterPassword": "Inserisci la tua password",
-  "createAccount": "Crea un account",
+  "addMeal": "Aggiungi pasto",
+  "addProduct": "Aggiungi Prodotto",
+  "addStorage": "Aggiungi",
+  "addSupermarket": "Aggiungi Supermercato",
   "alreadyHaveAccount": "Hai già un account? Accedi",
-  "editStorage": "Modifica Dispensa",
-  "storageName": "Nome Dispensa",
-  "searchIcon": "Cerca icona",
-  "expenseDetailTitle": "Dettaglio Spesa",
-  "date": "Data",
-  "totalAmount": "Totale",
-  "details": "Dettagli",
-  "home": "Home",
-  "loginRegister": "Accedi/Registrati",
-  "menu": "Menu",
+  "appBarBackgroundColor": "Colore di Sfondo AppBar",
+  "apr": "Apr",
+  "aug": "Ago",
+  "barcode": "Codice a barre",
+  "cancel": "Annulla",
+  "carbohydrates": "Carboidrati",
+  "category": "Categoria",
+  "change_name_to": "Cambia nome in",
   "changeLanguage": "Cambia lingua",
   "changeTheme": "Cambia tema",
-  "logout": "Logout",
-  "inventoryTitle": "Vedere Inventario",
-  "addStorage": "Aggiungi",
-  "mealType": "Tipo di pasto",
-  "totalExpense": "Totale spesa",
-  "products": "Prodotti",
-  "shoppingTitle": "Fare la spesa",
-  "selectSupermarket": "Seleziona un supermercato",
+  "cholesterol": "Colesterolo",
+  "chooseFromGallery": "Scegli dalla galleria",
   "close": "Chiudi",
-  "addSupermarket": "Aggiungi Supermercato",
-  "addProduct": "Aggiungi Prodotto",
-  "noSavedProducts": "Non ci sono prodotti salvati disponibili",
-  "filterByCategory": "Filtra per categoria",
-  "selectCategory": "Seleziona Categoria",
-  "filter": "Filtra",
-  "searchByProductName": "Cerca per nome del prodotto",
-  "enterProductName": "Inserisci nome del prodotto",
-  "totalBalance": "Saldo totale",
-  "saveExpense": "Salva Spesa",
-  "expenseSaved": "Spesa salvata con successo!",
-  "userProfile": "Profilo Utente",
-  "name": "Nome",
-  "noUserLoggedIn": "Nessun utente connesso",
-  "noExpensesFound": "Nessuna spesa trovata",
-  "noExpensesForPeriod": "Nessuna spesa trovata per il periodo selezionato",
-  "noMealsFound": "Nessun pasto trovato",
-  "noMealsForPeriod": "Nessun pasto trovato per il periodo selezionato",
-  "weekOf": "Settimana del",
-  "monthOf": "Mese di",
-  "jan": "Gen",
-  "feb": "Feb",
-  "mar": "Mar",
-  "apr": "Apr",
-  "may": "Mag",
-  "jun": "Giu",
-  "jul": "Lug",
-  "aug": "Ago",
-  "sep": "Set",
-  "oct": "Ott",
-  "nov": "Nov",
+  "colorLabel": "{color}",
+  "confirm": "Conferma",
+  "confirmDelete": "Sei sicuro di voler eliminare questo supermercato?",
+  "confirmDeleteExpense": "Sei sicuro di voler eliminare questa spesa?",
+  "confirmDeleteMeal": "Sei sicuro di voler eliminare questo pasto?",
+  "confirmDeleteMessage": "Sei sicuro di voler eliminare {name}?",
+  "confirmNewPassword": "Conferma Nuova Password",
+  "confirmPassword": "Conferma password",
+  "createAccount": "Crea un account",
+  "currentPassword": "Password Attuale",
+  "customizeCategories": "Personalizza categorie",
+  "customizeTheme": "Personalizza Tema",
+  "dairy_products": "Latticini",
+  "darkTheme": "Tema Scuro",
+  "date": "Data",
+  "daysUntilExpiration": "scadenza",
   "dec": "Dic",
-  "ok": "Ok",
-  "invalidValue": "Valore non valido",
-  "enterBudget": "Inserisci il budget",
+  "delete": "Elimina",
+  "deleteButtonTooltip": "Elimina macronutriente",
+  "dessert": "Dolce",
+  "details": "Dettagli",
+  "drinks": "Bevande",
+  "edit_macronutrient": "Modifica Macronutriente",
+  "edit_value_100g": "Modifica valore (100g)",
+  "editButtonTooltip": "Modifica macronutriente",
+  "editProduct": "Modifica Prodotto",
+  "editQuantity": "Modifica Quantità",
+  "editStorage": "Modifica Dispensa",
+  "email": "Email",
+  "energy": "Energia",
   "enterAmount": "Inserisci l'importo",
-  "suggest": "Suggerisci",
+  "enterBudget": "Inserisci il budget",
+  "enterEmail": "Inserisci la tua email",
+  "enterPassword": "Inserisci la tua password",
+  "enterProductName": "Inserisci nome del prodotto",
+  "enterUsername": "Inserisci il tuo nome utente",
+  "error": "Errore",
+  "errorUpdatingPassword": "Errore durante l'aggiornamento della password. Riprova.",
+  "expenseDeleted": "Spesa eliminata con successo",
+  "expenseDetailTitle": "Dettaglio Spesa",
+  "expenseSaved": "Spesa salvata con successo!",
+  "expirationDate": "Data di scadenza",
+  "fats": "Grassi",
+  "feb": "Feb",
+  "fiber": "Fibre",
+  "filter": "Filtra",
+  "filterByCategory": "Filtra per categoria",
+  "filterRecipes": "Filtra Ricette",
+  "fish": "Pesce",
+  "freezer": "Freezer",
+  "fridge": "Frigorifero",
+  "fruit": "Frutta",
+  "gramsAvailable": "g disponibili",
+  "have": "Hai",
+  "home": "Home",
+  "imageUrl": "URL dell'immagine",
+  "incorrectCurrentPassword": "La password attuale è errata.",
+  "insertMealType": "Inserisci pasto",
+  "insertProductName": "Inserisci nome del prodotto",
+  "invalidValue": "Valore non valido",
+  "inventory": "Inventario",
+  "inventoryTitle": "Vedere Inventario",
+  "jan": "Gen",
+  "jul": "Lug",
+  "jun": "Giu",
+  "kgAvailable": "kg disponibili",
+  "language": "Lingua",
+  "lightTheme": "Tema Chiaro",
+  "listProducts": "Elenco dei prodotti",
+  "loadRecipeScreen": "Carica Schermata Ricetta",
+  "login": "Accedi",
+  "loginRegister": "Accedi/Registrati",
+  "loginSuccess": "Accesso effettuato con successo",
+  "logout": "Logout",
+  "macronutrient": "Macronutriente",
+  "macronutrients": "Macronutrienti",
+  "mar": "Mar",
+  "may": "Mag",
+  "meal_type_breakfast": "Colazione",
+  "meal_type_dinner": "Cena",
+  "meal_type_lunch": "Pranzo",
+  "meal_type_snack": "Merenda",
+  "mealDeleted": "Pasto eliminato con successo",
+  "mealSavedSuccessfully": "Pasto salvato con successo",
+  "mealType": "Tipo di pasto",
+  "meat": "Carne",
+  "menu": "Menu",
+  "modifyThemeColors": "Modifica colori dell'app",
+  "monounsaturated_fats": "Grassi Monoinsaturi",
+  "month": "Mese",
+  "monthOf": "Mese di",
+  "name": "Nome",
+  "nameLabel": "Nome",
+  "newPassword": "Nuova Password",
+  "newProduct": "Nuovo Prodotto",
+  "no": "No",
+  "noAccount": "Non hai un account? Registrati",
   "noAvailableProducts": "Nessun prodotto disponibile, prova a cambiare categoria o fare la spesa",
+  "noExpensesForPeriod": "Nessuna spesa trovata per il periodo selezionato",
+  "noExpensesFound": "Nessuna spesa trovata",
+  "noImageAvailable": "Immagine non disponibile",
+  "noImageTaken": "Nessuna immagine scattata",
+  "noMealsForPeriod": "Nessun pasto trovato per il periodo selezionato",
+  "noMealsFound": "Nessun pasto trovato",
+  "noRecipesFound": "Nessuna ricetta trovata",
+  "noSavedProducts": "Non ci sono prodotti salvati disponibili",
+  "noSelectedProducts": "Nessun prodotto selezionato",
+  "noUserLoggedIn": "Nessun utente connesso",
+  "nov": "Nov",
+  "oct": "Ott",
+  "ok": "Ok",
+  "onPrimaryColor": "Colore On Primary",
+  "other": "Altro",
+  "pantry": "Dispensa",
+  "password": "Password",
+  "passwordsDoNotMatch": "Le password non corrispondono",
+  "passwordUpdated": "Password aggiornata con successo!",
+  "pasta_bread_rice": "Pasta, Pane e Riso",
+  "polyunsaturated_fats": "Grassi Polinsaturi",
+  "price": "Prezzo",
+  "pricePerKg": "Prezzo per kg",
+  "primaryColor": "Colore Primario",
+  "productDeletedSuccessfully": "Prodotto eliminato con successo",
+  "productName": "Nome prodotto",
+  "products": "Prodotti",
+  "proteins": "Proteine",
+  "purchaseDate": "Data di acquisto",
+  "quantity": "Quantità",
+  "quantityInKg": "Quantità in peso (kg)",
+  "quantityOwned": "Quantità posseduta",
   "quantityUnitOwned": "Unità possedute",
   "quantityWeightOwned": "Peso totale posseduto",
-  "editProduct": "Modifica Prodotto",
-  "mealDeleted": "Pasto eliminato con successo",
-  "expenseDeleted": "Spesa eliminata con successo",
-  "confirmDeleteExpense": "Sei sicuro di voler eliminare questa spesa?",
-  "no": "No",
-  "yes": "Sì",
-  "confirmDeleteMeal": "Sei sicuro di voler eliminare questo pasto?",
-  "modifyThemeColors": "Modifica colori dell'app",
-  "customizeTheme": "Personalizza Tema",
-  "lightTheme": "Tema Chiaro",
-  "darkTheme": "Tema Scuro",
-  "primaryColor": "Colore Primario",
-  "onPrimaryColor": "Colore On Primary",
+  "recipeTips": "Consigli per la ricetta",
+  "removeAllCategories": "Rimuovi tutte le categorie",
+  "salty_snacks": "Snack salati",
+  "saturated_fats": "Grassi Saturi",
+  "sauces_condiments": "Salse e Condimenti",
+  "save": "Salva",
+  "save_meal": "Salva pasto",
+  "saveButtonTooltip": "Salva modifiche",
+  "saveExpense": "Salva Spesa",
+  "search": "Cerca",
+  "searchByProductName": "Cerca per nome del prodotto",
+  "searchIcon": "Cerca icona",
+  "searchProductByName": "Cerca prodotto per nome",
   "secondaryColor": "Colore Secondario",
-  "appBarBackgroundColor": "Colore di Sfondo AppBar",
+  "selectCategory": "Seleziona Categoria",
   "selectColor": "Seleziona Colore",
-  "colorLabel": "{color}",
-  "daysUntilExpiration": "scadenza",
-  "delete": "Elimina",
-  "confirmDelete": "Sei sicuro di voler eliminare questo supermercato?",
-  "confirmDeleteMessage": "Sei sicuro di voler eliminare {name}?",
-  "newPassword": "Nuova Password",
-  "updatePassword": "Aggiorna Password",
-  "passwordUpdated": "Password aggiornata con successo!",
-  "errorUpdatingPassword": "Errore durante l'aggiornamento della password. Riprova.",
-  "currentPassword": "Password Attuale",
-  "confirmNewPassword": "Conferma Nuova Password",
-  "incorrectCurrentPassword": "La password attuale è errata.",
-  "noRecipesFound": "Nessuna ricetta trovata",
-  "loadRecipeScreen": "Carica Schermata Ricetta",
-  "filterRecipes": "Filtra Ricette",
-  "selectProducts": "Seleziona prodotti che vuoi aggiungere alla ricetta",
-  "mealSavedSuccessfully": "Pasto salvato con successo",
-  "productDeletedSuccessfully": "Prodotto eliminato con successo",
-  "language": "Lingua",
+  "selectedProducts": "Prodotti selezionati",
+  "selectedQuantity": "Quantità selezionata",
   "selectLanguage": "Seleziona Lingua",
-  "noAccount": "Non hai un account? Registrati"
+  "selectMealType": "Seleziona il tipo di pasto",
+  "selectProducts": "Seleziona prodotti che vuoi aggiungere alla ricetta",
+  "selectSupermarket": "Seleziona un supermercato",
+  "sep": "Set",
+  "shopping": "Fai la spesa",
+  "shoppingTitle": "Fare la spesa",
+  "signUp": "Registrati",
+  "signupSuccess": "Registrazione completata con successo",
+  "sodium": "Sodio",
+  "storageName": "Nome Dispensa",
+  "store": "Negozio",
+  "successAddProduct": "Prodotto aggiunto con successo",
+  "sugars": "Zuccheri",
+  "suggest": "Suggerisci",
+  "supermarket": "Supermercato",
+  "takePicture": "Scatta foto",
+  "total": "Totale",
+  "totalAmount": "Totale",
+  "totalBalance": "Saldo totale",
+  "totalExpense": "Totale spesa",
+  "totalWeight": "Peso totale",
+  "unitPrice": "Prezzo unitario",
+  "units": "Unità",
+  "unitWeight": "Peso unitario",
+  "update": "Aggiorna",
+  "updatePassword": "Aggiorna Password",
+  "username": "Nome utente",
+  "userProfile": "Profilo Utente",
+  "valueLabel": "Valore (100g)",
+  "valuePer100g": "Valore (100g)",
+  "valuesPer100g": "Valori (100g)",
+  "vegetables": "Verdure",
+  "viewExpenses": "Visualizza spese",
+  "viewMeals": "Visualizza pasti",
+  "water": "Acqua",
+  "week": "Settimana",
+  "weekOf": "Settimana del",
+  "weightInGrams": "Peso (g)",
+  "weightInKg": "Peso (kg)",
+  "year": "Anno",
+  "yes": "Sì"
 }
